# agentic-rag

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml  sample.txt  start.py  test_api_live.py  test_workflow.py
.trae/documents/: BACKEND.md  DOCKER_COMPOSE_IMPLEMENTATION.md  FASTAPI_IMPLEMENTATION.md  GEMINI_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  JSON_PATCH_IMPLEMENTATION.md  MINIO_IMPLEMENTATION.md  MONGODB_IMPLEMENTATION.md  PRD.md  PYDANTIC_AI_IMPLEMENTATION.md  PYPDF_IMPLEMENTATION.md  TREE_MERGER_MODELS_CONFIG.md  TREE_MERGER_SERVICE_CODE.md  TREE_MERGER_TESTING_DEPLOYMENT.md  TREE_MERGING_SYSTEM_IMPLEMENTATION.md
app/: __init__.py  main.py
app/api/: router.py
app/api/v1/: documents.py  queries.py  query.py  trees.py  users.py
app/core/: cache.py  config.py  database.py  exceptions.py  storage.py
app/models/: document.py  query.py  tree.py
app/services/: documents.py  gemini_service.py  json_patch_service.py  pdf_service.py  pydantic_ai_service.py  query.py  tree_merger_service.py
scripts/: mongo-init.js
tests/: test_api.py  test_services.py
